5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1575_1333.log
== TEST (2019-03-12 22:17:19) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print() 
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:50:02) 
-- CODE:
expressao = 
print(21) 
-- EXECUTION TIME:
0.162523
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:50:05) 
-- CODE:
expressao = 
print(21) 
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:50:38) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.193234
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:50:46) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.214969
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao =30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:50:49) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21) 
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:51:17) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(21) 
-- EXECUTION TIME:
0.207684
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:51:30) 
-- CODE:
expressao =(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(21) 
-- EXECUTION TIME:
0.185624
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao =(30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:29:57) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10)
print(21) 
-- EXECUTION TIME:
0.264131
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:01) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10)
print(21) 
-- EXECUTION TIME:
0.174662
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10)
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:10) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.178494
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:13) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.160338
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:30:34) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- EXECUTION TIME:
0.170819
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:31:03) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- EXECUTION TIME:
0.148744
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:31:06) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- EXECUTION TIME:
0.1363
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:31:08) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- EXECUTION TIME:
0.126849
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:31:10) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- EXECUTION TIME:
0.128123
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:31:12) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(expressao) 
-- ERROR:
File "XXXX", line 1
    expressao = 30–3** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:39:01) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.154568
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:39:05) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print(21) 
-- EXECUTION TIME:
0.162958
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:40:28) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print("21") 
-- EXECUTION TIME:
0.203277
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:40:45) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print 21
-- EXECUTION TIME:
0.196167
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:40:50) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10
print 
-- EXECUTION TIME:
0.117348
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:40:55) 
-- CODE:
expressao = 30–3** 2 + 8 // 3 ** 2 * 10

-- EXECUTION TIME:
0.140267
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30\u20133** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:44:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.128851
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:44:49) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(29/90)
-- EXECUTION TIME:
0.156617
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:44:52) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(29/90)
-- EXECUTION TIME:
0.176655
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:45:28) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/80)
-- EXECUTION TIME:
0.131445
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:45:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47//80)
-- EXECUTION TIME:
0.136637
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:45:44) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 80)
-- EXECUTION TIME:
0.206996
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:45:47) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 80)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:45:58) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47//90)
-- EXECUTION TIME:
0.183894
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:46:01) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47//90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:46:16) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- EXECUTION TIME:
0.123277
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:46:20) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:46:52) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 / 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:46:53) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 / 90)
-- EXECUTION TIME:
0.13119
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:06) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.203609
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:07) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.22735
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:08) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.0914671
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:08) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.194625
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:08) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.094795
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/1333/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:08) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47/90)
-- EXECUTION TIME:
0.0914619
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:15) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 / 90)
-- EXECUTION TIME:
0.128739
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:32) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- EXECUTION TIME:
0.144974
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- EXECUTION TIME:
0.134315
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:33) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- EXECUTION TIME:
0.106017
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:34) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:34) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:34) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(47 // 90)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:49) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:47:50) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:51) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.170081
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:52) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.19954
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:52) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.100393
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:47:53) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.105566
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:42:58) 
-- CODE:

print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:43:01) 
-- CODE:

print(21)
-- EXECUTION TIME:
0.218652
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
